Update on Overleaf.

--- a/chapterStatus2019.tex
+++ b/chapterStatus2019.tex
@@ -21,40 +21,40 @@ Global precipitation anomalies in 2018 were also reported by the WMO \citep{WMO1
 \begin{figure*}[h]
   \centering
   \subfigure[$\Delta$temperature at 2m (2019-climavg)] {\includegraphics*[viewport=187 60 430 750,clip,angle=90,scale=0.65]{FIGS_STATUS/2019-2000_2018IFS_t2m_EMEP01.pdf}}
-  \subfigure[$\Delta$precipitation (2018-climavg)] {\includegraphics*[viewport=187 60 430 750,clip,angle=90,scale=0.65]{FIGS_STATUS/2018-2000_2017IFS_aPr_EMEP01.pdf}}
-  \caption{Meteorological conditions in 2018 compared to the 2000-2017 average (climavg) for: a) Annual mean temperature at 2m [K] and b) Annual precipitation [mm]. The meteorological data have been calculated with the ECMWF-IFS model.}
-\label{fig:2018-avMET}
+  \subfigure[$\Delta$precipitation (2019-climavg)] {\includegraphics*[viewport=187 60 430 750,clip,angle=90,scale=0.65]{FIGS_STATUS/2019-2000_2018IFS_aPr_EMEP01.pdf}}
+  \caption{Meteorological conditions in 2019 compared to the 2000-2018 average (climavg) for: a) Annual mean temperature at 2m [K] and b) Annual precipitation [mm]. The meteorological data have been calculated with the ECMWF-IFS model.}
+\label{fig:metyear-avMET}
 \end{figure*}
 
-Compared to the 2000-2017 average, higher temperatures in 2018 are clearly seen in Figure~\ref{fig:2018-avMET} a) over the Arctic, central and south-eastern Europe, and slightly lower temperatures 
+Compared to the 2000-2018 average, higher temperatures in 2019 are clearly seen in Figure~\ref{fig:metyear-avMET} a) over the Arctic, central and south-eastern Europe, and slightly lower temperatures 
 confined to limited parts of north-western and south-western Europe, Kazakhstan and southern Russia. Particularly, Turkey had abnormally high temperatures throughout the year with means above normal for all months \citep{Sensoy:Turkey2018}.
 Svalbard recorded large positive temperature anomalies in 2018 \citep{Overland:ARC2018}, especially in the beginning with a record warm May and towards the end of the year.
 
-Despite some local extreme precipitation events with heavy rainfall in short time, especially in western and south central Europe, 2018 was overall a dry year in much of Europe. Compared to the 2000-2017 average, precipitation in 2018  (Figure~\ref{fig:2018-avMET} b)) shows higher amounts than normal in south-west and south-east Europe, and below-normal precipitation in central and northern Europe. Iceland had more precipitation than the 2000-2017 average in 2018 with Reykjavik breaking a record with 261 rainy days.
+Despite some local extreme precipitation events with heavy rainfall in short time, especially in western and south central Europe, 2018 was overall a dry year in much of Europe. Compared to the 2000-2018 average, precipitation in 2019  (Figure~\ref{fig:metyear-avMET} b)) shows higher amounts than normal in south-west and south-east Europe, and below-normal precipitation in central and northern Europe. Iceland had more precipitation than the 2000-2017 average in 2018 with Reykjavik breaking a record with 261 rainy days.
 
 \begin{figure}[h]
   \centering 
-  \subfigure[$\Delta$temperature at 2m (AprSep 2019-climavg)]{\includegraphics*[viewport=187 60 425 750,clip,angle=90,scale=0.65]{FIGS_STATUS/2018-2000_2017IFS_halfYrSum_T2m.pdf}}
-  \subfigure[$\Delta$temperature at 2m (OctMar 2017-climavg)]{\includegraphics*[viewport=187 60 425 750,clip,angle=90,scale=0.65]{FIGS_STATUS/2018-2000_2017IFS_halfYrVin_T2m.pdf}}
-  \caption{Meteorological conditions in 2018 compared to the 2000-2017 average (climavg) for: a) Summer (April-September) temperature [K], b) Winter (January-March and October-December) temperature [K]. The meteorological data have been calculated with the ECMWF-IFS model.} 
-\label{fig:temp2018-avMET}
+  \subfigure[$\Delta$temperature at 2m (AprSep 2019-climavg)]{\includegraphics*[viewport=187 60 425 750,clip,angle=90,scale=0.65]{FIGS_STATUS/2019-2000_2018IFS_halfYrSum_T2m.pdf}}
+  \subfigure[$\Delta$temperature at 2m (OctMar 2019-climavg)]{\includegraphics*[viewport=187 60 425 750,clip,angle=90,scale=0.65]{FIGS_STATUS/2019-2000_2018IFS_halfYrVin_T2m.pdf}}
+  \caption{Meteorological conditions in 2019 compared to the 2000-2018 average (climavg) for: a) Summer (April-September) temperature [K], b) Winter (January-March and October-December) temperature [K]. The meteorological data have been calculated with the ECMWF-IFS model.} 
+\label{fig:temp-avMET}
 \end{figure}
 
-Figure~\ref{fig:temp2018-avMET} shows the temperatures in 2018 compared to the 2000-2017 average in Europe for the summer months (April through September) and the winter months (October through December and January through March). 
-Characteristic of the year 2018 is the higher than average summer temperature in central Europe, as shown in Figure~\ref{fig:temp2018-avMET}~a) with temperatures in 2018 compared to the 2000-2017 average. The heat wave during the summer of 2018 and its effect on air pollution levels are discussed in more detail in a separate chapter (Chapter~\ref{ch:Summer2018}). Spring, with an exceptionally warm May, was the warmest on record in Bosnia and Herzegovina, Bulgaria, Greece, Serbia and Turkey. May was also the warmest month on record in Svalbard, Scandinavia, the Baltic countries, Austria and Germany. Many of these regions continued breaking temperature records in the summer and autumn months.
-In Spain, the United Kingdom, Ireland and northern Scandinavia the winter was colder than normal, and close to normal in central Europe. Southeastern Europe experienced a milder than average winter, see Figure~\ref{fig:temp2018-avMET}~b). In February and March, easterly winds brought cold Siberian air to most countries in Europe. March was particularly cold in European parts of Russia with an anomaly of about -3$\degrees$C. In April the weather changed from winter to summer conditions in only a few days for some areas in central and southeastern Europe. 
+Figure~\ref{fig:temp-avMET} shows the temperatures in 2018 compared to the 2000-2017 average in Europe for the summer months (April through September) and the winter months (October through December and January through March). 
+Characteristic of the year 2018 is the higher than average summer temperature in central Europe, as shown in Figure~\ref{fig:temp-avMET}~a) with temperatures in 2018 compared to the 2000-2017 average. The heat wave during the summer of 2018 and its effect on air pollution levels are discussed in more detail in a separate chapter (Chapter~\ref{ch:Summer2018}). Spring, with an exceptionally warm May, was the warmest on record in Bosnia and Herzegovina, Bulgaria, Greece, Serbia and Turkey. May was also the warmest month on record in Svalbard, Scandinavia, the Baltic countries, Austria and Germany. Many of these regions continued breaking temperature records in the summer and autumn months.
+In Spain, the United Kingdom, Ireland and northern Scandinavia the winter was colder than normal, and close to normal in central Europe. Southeastern Europe experienced a milder than average winter, see Figure~\ref{fig:temp-avMET}~b). In February and March, easterly winds brought cold Siberian air to most countries in Europe. March was particularly cold in European parts of Russia with an anomaly of about -3$\degrees$C. In April the weather changed from winter to summer conditions in only a few days for some areas in central and southeastern Europe. 
 Bosnia and Herzegovina and Serbia had their warmest October on record.
 
 \begin{figure}[H]
   \centering
-  \subfigure[$\Delta$precipitation (AprSep 2018-climavg)]{\includegraphics*[viewport=187 60 425 752,clip,angle=90,scale=0.65]{FIGS_STATUS/2018-2000_2017IFS_halfYrSum_APr.pdf}}
-  \subfigure[$\Delta$precipitation (OctMar 2018-climavg)]{\includegraphics*[viewport=187 60 425 752,clip,angle=90,scale=0.65]{FIGS_STATUS/2018-2000_2017IFS_halfYrVin_APr.pdf}}
-  \caption{Meteorological conditions in 2018 compared to the 2000-2017 average (climavg) for: a) Summer (April-September) precipitation [mm], b) winter (January-March and October-December) precipitation [mm]. The meteorological data have been calculated with the ECMWF-IFS model.} 
-\label{fig:prec2017-avMET}
+  \subfigure[$\Delta$precipitation (AprSep 2019-climavg)]{\includegraphics*[viewport=187 60 425 752,clip,angle=90,scale=0.65]{FIGS_STATUS/2019-2000_2018IFS_halfYrSum_APr.pdf}}
+  \subfigure[$\Delta$precipitation (OctMar 2019-climavg)]{\includegraphics*[viewport=187 60 425 752,clip,angle=90,scale=0.65]{FIGS_STATUS/2019-2000_2018IFS_halfYrVin_APr.pdf}}
+  \caption{Meteorological conditions in 2019 compared to the 2000-2018 average (climavg) for: a) Summer (April-September) precipitation [mm], b) winter (January-March and October-December) precipitation [mm]. The meteorological data have been calculated with the ECMWF-IFS model.} 
+\label{fig:prec-avMET}
 \end{figure}
 
-Flooding affected central Europe in the beginning of the year, but the same area later experienced extremely dry conditions (see precipitation in winter and summer in 2018 compared to the 2000-2017 average in Figure~\ref{fig:prec2017-avMET}). Precipitation for April through September in Figure~\ref{fig:prec2017-avMET}~a) shows that northern and central Europe had much less precipitation than the 2000-2017 average, with the exception of northwestern coastal regions. Latvia reported its second driest spring, Ireland and the Netherlands its driest summer on record, and in Sweden a severe drought from May to July caused extensive forest fires in central parts of the country. Drought was also reported in the United Kingdom. Germany reported the second driest April-September period and Czechia its driest January-August period on record.
-However, above-average precipitation amounts were observed in south-west and south-east Europe in both the summer and winter months. In Figure~\ref{fig:prec2017-avMET}~b) precipitation for the winter months (January-March and October-December) in 2018), compared to the 2000-2017 average, is higher than average in western, central and southern Europe, and lower than average in north-eastern Europe. With the cold conditions in late February and early March some areas in western and southern Europe (Ireland, France, Italy and Portugal) experienced abnormal conditions with snow and freezing rain. And the year ended with above-average precipitation in December for most of central Europe, terminating the drought of the previous two seasons.
+Flooding affected central Europe in the beginning of the year, but the same area later experienced extremely dry conditions (see precipitation in winter and summer in 2018 compared to the 2000-2017 average in Figure~\ref{fig:prec-avMET}). Precipitation for April through September in Figure~\ref{fig:prec-avMET}~a) shows that northern and central Europe had much less precipitation than the 2000-2017 average, with the exception of northwestern coastal regions. Latvia reported its second driest spring, Ireland and the Netherlands its driest summer on record, and in Sweden a severe drought from May to July caused extensive forest fires in central parts of the country. Drought was also reported in the United Kingdom. Germany reported the second driest April-September period and Czechia its driest January-August period on record.
+However, above-average precipitation amounts were observed in south-west and south-east Europe in both the summer and winter months. In Figure~\ref{fig:prec-avMET}~b) precipitation for the winter months (January-March and October-December) in 2018), compared to the 2000-2017 average, is higher than average in western, central and southern Europe, and lower than average in north-eastern Europe. With the cold conditions in late February and early March some areas in western and southern Europe (Ireland, France, Italy and Portugal) experienced abnormal conditions with snow and freezing rain. And the year ended with above-average precipitation in December for most of central Europe, terminating the drought of the previous two seasons.
 
 
 \section{Measurement network 2018} 
