Update on Overleaf.

--- a/RefsMeteo.bib
+++ b/RefsMeteo.bib
@@ -1,3 +1,10 @@
+@MISC{WMO1248:2020,
+  author = {WMO},
+  title = {WMO Statement on the State of the Global Climate in 2019},
+  year = {2020},
+  note = {{W}MO-No. 1248, \url{https://public.wmo.int/en/resources/library}, ISBN 978-92-62-11248-5}
+}
+
 @MISC{WMO1233:2018,
   author = {WMO},
   title = {WMO Statement on the State of the Global Climate in 2018},
