--- a/report.tex
+++ b/report.tex
@@ -348,17 +348,17 @@
 %Now updated with the chapters that should be there 20/6-18 HF
 \part{Status of air pollution}
 \include{chapterStatus2019} 
-\include{chapterEmis2019} 
+%\include{chapterEmis2019} 
 
 \part{Research Activities (or should we rather call it Trends in air pollution)} 
 
-\include{chapterTrendsSandN} %Wenche, Hilde, Svetlana (Jonas/Augustin about how the trends have been calculated)
-\include{chapterTrendsOzone} %Sverre, David, Joffen
-\include{chapterTrendsOCandSIA} %Karl-Espen, David
+%\include{chapterTrendsSandN} %Wenche, Hilde, Svetlana (Jonas/Augustin about how the trends have been calculated)
+%\include{chapterTrendsOzone} %Sverre, David, Joffen
+%\include{chapterTrendsOCandSIA} %Karl-Espen, David
 
 \part{Technical EMEP Developments}
-\include{chapterEMEPModelUpdates}
-\include{chapterMeasurementDevelopments}
+%\include{chapterEMEPModelUpdates}
+%\include{chapterMeasurementDevelopments}
 
 \part{Appendices}
 \setcounter{part}{1}
@@ -370,11 +370,11 @@
 \renewcommand{\thepage}{{\Alph{chapter}:\arabic{page}}}
 \renewcommand{\thetable}{\Alph{chapter}:\arabic{table}}
 
-\include{chapterAPPX_EMIS_2019}
-\include{chapterAPPX_EMIS_trends}
-\include{chapterAPPX_SR_2019}
-\include{chapterAPPX_CountryRep}
-\include{chapterAPPX_ModelEval}
+%\include{chapterAPPX_EMIS_2019}
+%\include{chapterAPPX_EMIS_trends}
+%\include{chapterAPPX_SR_2019}
+%\include{chapterAPPX_CountryRep}
+%\include{chapterAPPX_ModelEval}
 
 
 \end{appendix}
