Update on Overleaf.

--- a/chapterStatus2019.tex
+++ b/chapterStatus2019.tex
@@ -275,18 +275,18 @@ observed annual mean \PM[10] concentrations, exceeding the AQG of 20 \ug, were r
 15.5 \ug) and in Austria (AT0002) and Czechia (CZ0003) both with 14.5 \ug.
 
 
-%\begin{figure}[ht]
-%  \centering{\includegraphics[clip=,angle=90,height=6cm,viewport=180 67 440 754]{FIGS_PM/ExcDays_PM10_ModObs_EMEP01_2018.pdf}}\\
-%  \vspace{0.5cm}
-%  \centering{\includegraphics[clip=,angle=90,height=6cm,viewport=180 67 440 754]{FIGS_PM/ExcDays_PM25_ModObs_EMEP01_2018.pdf}}
-%\caption{Calculated (with 0.1\degrees resolution) and observed (triangles) number of days with
-%  exceedances in 2018: \PM[10] exceeding 50 \ug (upper) and \PM[2.5]
-%  exceeding 25 \ug (lower panel). \textit{Note: The EU Directive requires no
-%    more than 35 days with exceedances for \PM[10], whereas WHO
-%    recommends no more than 3 days with exceedances for \PM[10] and
-%    \PM[2.5] per calendar year. }}
-%\label{fig:PMexceed}
-%\end{figure}
+\begin{figure}[ht]
+  \centering{\includegraphics[clip=,angle=90,height=6cm,viewport=180 67 440 754]{FIGS_PM/ExcDays_PM10_ModObs_EMEP01_2019.pdf}}\\
+  \vspace{0.5cm}
+  \centering{\includegraphics[clip=,angle=90,height=6cm,viewport=180 67 440 754]{FIGS_PM/ExcDays_PM25_ModObs_EMEP01_2019.pdf}}
+\caption{Calculated (with 0.1\degrees resolution) and observed (triangles) number of days with
+  exceedances in 2019: \PM[10] exceeding 50 \ug (upper) and \PM[2.5]
+  exceeding 25 \ug (lower panel). \textit{Note: The EU Directive requires no
+    more than 35 days with exceedances for \PM[10], whereas WHO
+    recommends no more than 3 days with exceedances for \PM[10] and
+    \PM[2.5] per calendar year. }}
+\label{fig:PMexceed}
+\end{figure}
 
 
 The maps in Figure~\ref{fig:PMexceed} show the number of days with
