Update on Overleaf.

--- a/chapterTrendsSandN.tex
+++ b/chapterTrendsSandN.tex
@@ -7,9 +7,9 @@
 
 \section{\label{sec:Trends_introduction}Introduction and background}
 
-Colocation: To be done
+Colocation: To be written
 
-We use the same methodology as described by \cite{aas2019global, mortier2020} to derive the trends at the individual stations. The significance of the trends is tested with the Mann-Kendall test \citep{hamed1998modified}. The related p-value is used to determine if the trend is significant or not within a confidence interval of 95\%. The slope is calculated with the Theil-Sen estimator which is less sensitive to outliers than standard least-squares methods \citep{sen1968estimates}. At least least 7 valid yearly regional averages (50\% of time coverage) are required in the regional time series for the computation of a slope.
+The same methodology as described by \cite{aas2019global, mortier2020} has been used to derive the trends at the individual stations. The significance of the trends is tested with the Mann-Kendall test \citep{hamed1998modified}. The related p-value is used to determine if the trend is significant or not within a confidence interval of 95\%. The slope is calculated with the Theil-Sen estimator which is less sensitive to outliers than standard least-squares methods \citep{sen1968estimates}. At least least 7 valid yearly averages (50\% of time coverage) are required per station for allowing the computation of a slope.
 
 An uncertainty is provided for each trend by combining the error of the slope calculation itself to the error of the residuals:
 
