Update on Overleaf.

--- a/RefsMeteo.bib
+++ b/RefsMeteo.bib
@@ -12,6 +12,13 @@
   note = {{W}MO-No. 1233, \url{https://public.wmo.int/en/resources/library}, ISBN 978-92-63-11233-0}
 }
 
+@MISC{Overland:ARC2019,
+  author = {Overland, J. and Hanna, E. and Hanssen-Bauer, I. and Kim, S.-J. and Walsh, J. E. and Wang, M. and Bhatt, U. S. and Thoman, R. L. and Ballinger, T. J.},
+  title = {Surface Air Temperature},
+  year = {2019},
+  note = {in Arctic Report Card 2019, NOAA, \url{http://www.arctic.noaa.gov/Report-Card/Report-Card-Archive}}
+}
+
 @MISC{Overland:ARC2018,
   author = {Overland, J. and Hanna, E. and Hanssen-Bauer, I. and Kim, S.-J. and Walsh, J. E. and Wang, M. and Bhatt, U. S. and Thoman, R. L.},
   title = {Surface Air Temperature},
