--- a/chapterStatus2019.tex
+++ b/chapterStatus2019.tex
@@ -16,7 +16,7 @@ The meteorological data to drive the EMEP MSC-W air quality model have been gene
 
 \subsection{Temperature and precipitation}
 The global mean temperature in 2019 was reported by the World Meteorological Organisation \citep{WMO1248:2020} as the second or third highest on record. In Europe, the annual mean temperature for 2019 was the warmest on record according to Copernicus (https://climate.copernicus.eu/ESOTC/2019/european-temperature) and October 2018 to September 2019 was the second warmest over land north of 60\degrees N since records beginning in 1900 (Arctic Report Card 2019 \citep{Overland:ARC2019}.
-Global precipitation anomalies in 2019 were also reported by the WMO \citep{WMO1248:2020} and in Europe, according to Copernicus (https://climate.copernicus.eu/index.php/ESOTC/2019/european-wet-and-dry-conditions) and BAMS (Regional climates 2019), annual totals were above normal in northern European Russia, northern Europe, and parts of western and southern Europe and below average in southern Iberian Peninsula, Iceland, Svalbard, and central and eastern Europe. 
+Global precipitation anomalies in 2019 were reported by the WMO \citep{WMO1248:2020} and in Europe, according to Copernicus (https://climate.copernicus.eu/index.php/ESOTC/2019/european-wet-and-dry-conditions) and BAMS (Regional climates 2019), average annual precipitation total was close to normal.
 
 \begin{figure*}[h]
   \centering
@@ -26,12 +26,11 @@ Global precipitation anomalies in 2019 were also reported by the WMO \citep{WMO1
 \label{fig:metyear-avMET}
 \end{figure*}
 
-Compared to the 2000-2018 average, higher temperatures in 2019 are clearly seen in Figure~\ref{fig:metyear-avMET} a) over the Arctic, central and south-eastern Europe, and slightly lower temperatures 
-confined to limited parts of north-western and south-western Europe, Kazakhstan and southern Russia. Particularly, Turkey had abnormally high temperatures throughout the year with means above normal for all months \citep{Sensoy:Turkey2018}.
-Svalbard recorded large positive temperature anomalies in 2018 \citep{Overland:ARC2018}, especially in the beginning with a record warm May and towards the end of the year.
+Compared to the 2000-2018 average, higher temperatures in 2019 are clearly seen in Figure~\ref{fig:metyear-avMET} a) over the Arctic, southern European Russia, central and south-eastern Europe, and slightly lower temperatures confined to limited parts of northern and south-western Europe, northern and southern European Russia and Kazakhstan. 
+Many countries reported that 2019 was the warmest year on record, particularly Poland (since 1781) and Lithuania (since 1778), but also Ukraine (since 1881), Belarus (since 1945), Hungary (since 1901), Bulgaria (since 1930), Romania (since 1961) and Serbia (since 1951).
 
-Despite some local extreme precipitation events with heavy rainfall in short time, especially in western and south central Europe, 2018 was overall a dry year in much of Europe. Compared to the 2000-2018 average, precipitation in 2019  (Figure~\ref{fig:metyear-avMET} b)) shows higher amounts than normal in south-west and south-east Europe, and below-normal precipitation in central and northern Europe. Iceland had more precipitation than the 2000-2017 average in 2018 with Reykjavik breaking a record with 261 rainy days.
-
+Despite some seasonal local extreme precipitation events with heavy rainfall in eastern Norway, north-east Italy, south-east Spain, Ukraine and northern European Russia, and drought in the Iberian Peninsula and Latvia, 2019 was overall a normal year in much of Europe.
+Compared to the 2000-2018 average, precipitation in 2019 (Figure~\ref{fig:metyear-avMET} b)) shows higher amounts than normal in northern European Russia, northern Europe, and parts of western and southern Europe and below average in central and eastern Europe, southern Iberian Peninsula, Iceland and Svalbard. 
 \begin{figure}[h]
   \centering 
   \subfigure[$\Delta$temperature at 2m (AprSep 2019-climavg)]{\includegraphics*[viewport=187 60 425 750,clip,angle=90,scale=0.65]{FIGS_STATUS/2019-2000_2018IFS_halfYrSum_T2m.pdf}}
@@ -40,10 +39,11 @@ Despite some local extreme precipitation events with heavy rainfall in short tim
 \label{fig:temp-avMET}
 \end{figure}
 
-Figure~\ref{fig:temp-avMET} shows the temperatures in 2018 compared to the 2000-2017 average in Europe for the summer months (April through September) and the winter months (October through December and January through March). 
-Characteristic of the year 2018 is the higher than average summer temperature in central Europe, as shown in Figure~\ref{fig:temp-avMET}~a) with temperatures in 2018 compared to the 2000-2017 average. The heat wave during the summer of 2018 and its effect on air pollution levels are discussed in more detail in a separate chapter (Chapter~\ref{ch:Summer2018}). Spring, with an exceptionally warm May, was the warmest on record in Bosnia and Herzegovina, Bulgaria, Greece, Serbia and Turkey. May was also the warmest month on record in Svalbard, Scandinavia, the Baltic countries, Austria and Germany. Many of these regions continued breaking temperature records in the summer and autumn months.
-In Spain, the United Kingdom, Ireland and northern Scandinavia the winter was colder than normal, and close to normal in central Europe. Southeastern Europe experienced a milder than average winter, see Figure~\ref{fig:temp-avMET}~b). In February and March, easterly winds brought cold Siberian air to most countries in Europe. March was particularly cold in European parts of Russia with an anomaly of about -3$\degrees$C. In April the weather changed from winter to summer conditions in only a few days for some areas in central and southeastern Europe. 
-Bosnia and Herzegovina and Serbia had their warmest October on record.
+Figure~\ref{fig:temp-avMET} shows the temperatures in 2019 compared to the 2000-2018 average in Europe for the summer months (April through September) and the winter months (October through December and January through March). 
+
+Characteristic of the year 2019 is the higher than average winter temperature in central-east Europe and European Russia, as shown in Figure~\ref{fig:temp-avMET}~b) with temperatures in 2019 compared to the 2000-2018 average. The first months of 2019 was overall mild in Europe and Ireland reported their warmest winter on record, particularly February was exceptionally warm. In the Iberian Peninsula, central- and eastern Europe also March was warmer than usual. The year ended extremely mild in central-east and southeastern Europe, and European Russia. Czechia, Slovakia, Hungary, Croatia, Serbia and Greece reported their warmest autumn on record and it was the warmest October in Belarus and third warmest in Georgia, the warmest November in Romania and second warmest December in European Russia.
+
+Summer was abnormally warm in central and southern Europe, but rather cold in European Russia, see Figure~\ref{fig:temp-avMET}~a). Slovakia and Czechia reported their warmest summer, and second warmest in Hungary, Austria, Slovenia and Italy and third warmest in Belgium, Luxembourg, France, Germany and Switzerland. June was the warmest month on record in many western and central European countries, and in Ukraine and Georgia records were broken. There were two distinct heatwaves for June and July across western and central Europe. In contrast, August was colder than normal in European Russia. Spring was variable throughout Europe, April was warm and the second warmest month on record in Norway and Finland. On the contrary, May was colder than normal for most countries in Europe, in Slovenia the coldest on record, except in southern and western parts of the Iberian Peninsula where a heatwave occurred in mid-May.
 
 \begin{figure}[H]
   \centering
@@ -53,9 +53,11 @@ Bosnia and Herzegovina and Serbia had their warmest October on record.
 \label{fig:prec-avMET}
 \end{figure}
 
-Flooding affected central Europe in the beginning of the year, but the same area later experienced extremely dry conditions (see precipitation in winter and summer in 2018 compared to the 2000-2017 average in Figure~\ref{fig:prec-avMET}). Precipitation for April through September in Figure~\ref{fig:prec-avMET}~a) shows that northern and central Europe had much less precipitation than the 2000-2017 average, with the exception of northwestern coastal regions. Latvia reported its second driest spring, Ireland and the Netherlands its driest summer on record, and in Sweden a severe drought from May to July caused extensive forest fires in central parts of the country. Drought was also reported in the United Kingdom. Germany reported the second driest April-September period and Czechia its driest January-August period on record.
-However, above-average precipitation amounts were observed in south-west and south-east Europe in both the summer and winter months. In Figure~\ref{fig:prec-avMET}~b) precipitation for the winter months (January-March and October-December) in 2018), compared to the 2000-2017 average, is higher than average in western, central and southern Europe, and lower than average in north-eastern Europe. With the cold conditions in late February and early March some areas in western and southern Europe (Ireland, France, Italy and Portugal) experienced abnormal conditions with snow and freezing rain. And the year ended with above-average precipitation in December for most of central Europe, terminating the drought of the previous two seasons.
+Annual precipitation was generally below normal for south Caucasus, central-, eastern- and southwestern Europe, and wetter than normal in western parts of western Europe, southern parts of southeastern Europe and in northern European Russia, but some local seasonal heavy precipitation events, resulting in above-normal averages as well for individual periods and countries (see precipitation in winter and summer in 2019 compared to the 2000-2018 average in Figure~\ref{fig:prec-avMET}). 
 
+Particularly for 2019, was the higher than average precipitation in northern European Russia, southern Scandinavia, western Europe and along the Mediterranean coast of southeastern Europe shown for the winter months (January-March and October-December) in 2019 compared to the 2000-2018 average in Figure~\ref{fig:prec-avMET}~b). The winter season was very wet in northern European Russia, Moldova, southern Norway, Czechia, Greece and Turkey, and oppositely very dry in southern European Russia, western Norway, Ireland, southern France, Spain and Portugal. January was wetter than normal in central Europe, European Russia, Moldova and Spain, but oppositely it was the driest February in Spain of the twenty-first century, and also Germany, Belarus and Hungary received very little precipitation for this month. Spain, Portugal, Hungary, Romania, Ukraine and Moldova was also drier than normal in March, but northern European Russia broke records with wettest month. Turkey was wetter than normal in September, while Moldova was drier. For November the Alps recorded substantial snow amounts with new records in Switzerland, while it was still dry in Moldova. December was very wet in northern European Russia, Finland and southern Turkey, but abnormally dry in Macedonia and Bulgaria. For October, November and December, south Caucasus was extremely dry and in Georgia the snowcover for December was recordlow.
+
+Precipitation for April through September in Figure~\ref{fig:prec-avMET}~a) shows that Europe in general had much less precipitation in 2019 than the 2000-2018 average, with the exception of the northwestern coastal regions and central-south Europe. In Latvia and Belarus, April was the driest month on record, and also European Russia was extremely dry. For spring, parts of France and the Iberian Peninsula was much drier than normal, but wet in Scandinavia, Italy and the northern Balkans, and Slovenia reported wettest May on record. Summer was overall very dry in most of Europe, except for the eastern Mediterranean, the United Kingdom and southern Norway. Autumn continued with dry conditions in eastern Europe, Turkey and southwestern Iberia, while central and western Europe received above-normal precipitation. Denmark reported wettest autumn on record and eastern Norway was extremely wet while western was very dry, and in southeastern Spain local extreme precipitation totals due to heavy rain were reported for September.
 
 \section{Measurement network 2018} 
 \label{Obs_2018}
