Update on Overleaf.

--- a/report.tex
+++ b/report.tex
@@ -370,9 +370,9 @@
 \renewcommand{\thepage}{{\Alph{chapter}:\arabic{page}}}
 \renewcommand{\thetable}{\Alph{chapter}:\arabic{table}}
 
-%\include{chapterAPPX_EMIS_2019}
+\include{chapterAPPX_EMIS_2019}
 %\include{chapterAPPX_EMIS_trends}
-%\include{chapterAPPX_SR_2019}
+\include{chapterAPPX_SR_2019}
 %\include{chapterAPPX_CountryRep}
 %\include{chapterAPPX_ModelEval}
 
