--- a/chapterAPPX_EMIS_2019.tex
+++ b/chapterAPPX_EMIS_2019.tex
@@ -19,9 +19,9 @@ The land-based emissions for 2019 have been derived from the 2021
 official data submissions to UNECE CLRTAP \old{Update reference later \citep{CEIP2021}}.
 
 
-This year two different estimates for primary PM emissions have been available for the modeling: 1) EMEP emissions as prepared by CEIP based on the official data submissions for 2019, and 2) EMEP PM emissions where condensable organics from small-scale combustion are accounted for by using expert emission estimates for GNFR sector C from the TNO Ref2 data set for the following countries: Albania, Austria, Bosnia and Herzegovina, Belarus, Switzerland, Cyprus, Germany, Estonia, France,  Ireland, Lithuania, Montenegro, Poland, Russian Federation, Slovakia, Turkey and Ukraine.
+This year two different estimates for primary PM emissions have been available for the modeling: 1) EMEP emissions as prepared by CEIP based on the official data submissions for 2019, and 2) EMEP PM emissions where condensable organics from small-scale combustion are accounted for by using expert emission estimates for GNFR sector C from the TNO REF2.1 data set for the following countries: Albania, Austria, Bosnia and Herzegovina, Belarus, Switzerland, Cyprus, Germany, Estonia, France,  Ireland, Lithuania, Montenegro, Poland, Russian Federation, Slovakia, Turkey and Ukraine.
   %For more details please consult Chapter~\ref{ch:Condensables}.
-In this report 1) is referred to as EMEP and 2) is referred to as EMEPwRef2C. National emission totals for both data sets are shown in Table~\ref{tab:2019emisPM}.  \\
+In this report 1) is referred to as EMEP and 2) is referred to as EMEPwREF2.1C. National emission totals for both data sets are shown in Table~\ref{tab:2019emisPM}.  \\
 
 Emissions from international shipping occurring in different European seas within the EMEP domain are not reported to UNECE CLRTAP, but derived from other sources. This year's update uses the CAMS global shipping emissions \old{New reference? \citep{CAMSemis2019}}  developed by FMI (Finnish Meteorological Institute).
 \\
@@ -136,7 +136,7 @@ Note that emissions in this appendix are given in different units than used else
 \begin{tabular}{|l|r|r|r|r||r|r|r|}
 \hline
  Area/Pollutant& BC&PM$_{2.5}$&PM$_{co}$&PM$_{10}$&PM$_{2.5}$&PM$_{co}$&PM$_{10}$\\
- &&EMEP&EMEP&EMEP&EMEPwRef2C&EMEPwRef2C&EMEPwRef2C\\\hline\hline
+ &&EMEP&EMEP&EMEP&EMEPwREF2.1C&EMEPwREF2.1C&EMEPwREF2.1C\\\hline\hline
                        Albania&     2&    13&     3&    15&    12&     2&    14 \\\hline
                        Armenia&     1&     8&     2&    10&     8&     2&    10 \\\hline
                        Austria&     4&    14&    12&    26&    34&    12&    46 \\\hline
