changed Ref2 to REF2.1

--- a/chapterAPPX_SR_2019.tex
+++ b/chapterAPPX_SR_2019.tex
@@ -15,15 +15,15 @@
 % C.5: AOT40 (BF V, 15%, no BIC)
 % C.6: SOMO35 (BF N, 15%, no BIC)
 % C.7: SOMO35 (BF V, 15%, no BIC)
-% C.8: PM2.5 (BF P, 15%, BIC, EMEPwRef2C) ! not calculated with EMEP emissions
+% C.8: PM2.5 (BF P, 15%, BIC, EMEPwREF2.1C) ! not calculated with EMEP emissions
 % C.9: PM2.5 (BF S, 15%, BIC)
 % C.10: PM2.5 (BF N, 15%, BIC)
 % C.11: PM2.5 (BF A, 15%, BIC)
 % C.12: PM2.5 (BF V, 15%, BIC)
-% C.13: PM2.5 (BF SNAVP, 15%, BIC, EMEPwRef2C)
-% C.14: ECfine (BF P, 15%, BIC, EMEPwRef2C)
-% C.15: ECcoarse (BF P, 15%, BIC, EMEPwRef2C)
-% C.16: PPM2.5 (BF P, 15%, BIC, EMEPwRef2C)
+% C.13: PM2.5 (BF SNAVP, 15%, BIC, EMEPwREF2.1C)
+% C.14: ECfine (BF P, 15%, BIC, EMEPwREF2.1C)
+% C.15: ECcoarse (BF P, 15%, BIC, EMEPwREF2.1C)
+% C.16: PPM2.5 (BF P, 15%, BIC, EMEPwREF2.1C)
 % The table captions can have up to 3 lines in order to fit on one page.
 
 The source-receptor tables in this appendix are calculated for the
@@ -34,8 +34,8 @@ The source-receptor (SR) relationships give the change in air concentrations or 
 change in emissions from each emitter country.\\ 
 
 %Some additional emphasis this year has been put on the emission of condensable organics, and most of
-The tables in this appendix are based on model calculations using the \textit{EMEPwRef2C} dataset as described in Chapter ~\ref{ch:emis2019} and summarized in Appendix~\ref{ch:appx_emis_2019}.
-%However, for tables related to primary particulate matter, additional tables are provided that are based on the \textit{EMEP} emission dataset as provided by CEIP. Details about these emission datasets are given in Chapters~\ref{ch:emis2019} and~\ref{ch:Condensables}, but for a quick overview, the national emission data for 2019 can be found in Appendix~\ref{ch:appx_emis_2019}, together with the expert estimates for 2019 for PPM. The expert estimates including condensable organics in GNFR sector C (EMEPwRef2C) are described in Chapter~\ref{chap:TNO}. The setup of the model for the source receptor model runs are described in Chapter~\ref{ch:Condensables}.\\
+The tables in this appendix are based on model calculations using the \textit{EMEPwREF2.1C} dataset as described in Chapter ~\ref{ch:emis2019} and summarized in Appendix~\ref{ch:appx_emis_2019}.
+%However, for tables related to primary particulate matter, additional tables are provided that are based on the \textit{EMEP} emission dataset as provided by CEIP. Details about these emission datasets are given in Chapters~\ref{ch:emis2019} and~\ref{ch:Condensables}, but for a quick overview, the national emission data for 2019 can be found in Appendix~\ref{ch:appx_emis_2019}, together with the expert estimates for 2019 for PPM. The expert estimates including condensable organics in GNFR sector C (EMEPwREF2.1C) are described in Chapter~\ref{chap:TNO}. The setup of the model for the source receptor model runs are described in Chapter~\ref{ch:Condensables}.\\
 
 For each country, reductions in five different pollutants have been
 calculated separately, with an emission reduction of 15\% for \sox,
@@ -142,11 +142,11 @@ VOC emissions have been summed up. Units: ng/m$^3$
 \end{itemize}
 \vspace{20pt}
   
-%% Source-receptor calculations with the 15\% perturbation method used the EMEPwRef2C emission data set. Additional source-receptor calculations for PM, using the official EMEP emissions for PPM, were done only with the new \textit{Local Fraction} method. For details about this method see Section~\ref{sec:LFrac}. Since the \textit{Local Fraction} method tracks all emissions, results have been scaled by a factor of 0.15 to give comparable results for concentrations and indicator tables.
-%% Unless stated otherwise in the captions of the tables, the results are given for the model calculations using EMEPwRef2C emissions.
+%% Source-receptor calculations with the 15\% perturbation method used the EMEPwREF2.1C emission data set. Additional source-receptor calculations for PM, using the official EMEP emissions for PPM, were done only with the new \textit{Local Fraction} method. For details about this method see Section~\ref{sec:LFrac}. Since the \textit{Local Fraction} method tracks all emissions, results have been scaled by a factor of 0.15 to give comparable results for concentrations and indicator tables.
+%% Unless stated otherwise in the captions of the tables, the results are given for the model calculations using EMEPwREF2.1C emissions.
 
 %% %FOR EC
-%% For EC emissions, two different emission data sets have been used: 1) Official EMEP gridded EC emissions and 2) EC derived from the EMEPwRef2C emission data, using a set of PM-split files consistent with the TNO \textit{Ref2} data set. For details see Chapter~\ref{ch:EC}.
+%% For EC emissions, two different emission data sets have been used: 1) Official EMEP gridded EC emissions and 2) EC derived from the EMEPwREF2.1C emission data, using a set of PM-split files consistent with the TNO \textit{REF2.1} data set. For details see Chapter~\ref{ch:EC}.
 
 %\end{center}
 
